@@ -56,7 +56,7 @@
 #endif
 
 #ifndef lint
-static char *rcs_version="$Id: mtrie_conf.c,v 1.35 1999/05/15 14:40:29 db Exp $";
+static char *rcs_version="$Id: mtrie_conf.c,v 1.36 1999/05/19 05:31:01 db Exp $";
 #endif /* lint */
 
 #define MAXPREFIX (HOSTLEN+USERLEN+15)
@@ -516,15 +516,47 @@ static aConfItem *find_user_piece(DOMAIN_PIECE *piece_ptr, int flags,
 
   wild_aconf = piece_ptr->wild_conf_ptr;
 
-  for(ptr=piece_ptr; ptr; ptr=ptr->next_piece)
+  if((*user == '~'))
     {
-      if((aconf=ptr->conf_ptr))
+      for(ptr=piece_ptr; ptr; ptr=ptr->next_piece)
 	{
-	  if( (!matches(ptr->host_piece,host_piece)) &&
-	      (aconf->status & flags) )
+	  if((aconf=ptr->conf_ptr))
 	    {
-	      if(!strcasecmp(aconf->name,user))
-		first_aconf = aconf;
+	      if( (!matches(ptr->host_piece,host_piece)) &&
+		  (aconf->status & flags) )
+		{
+		  if(!strcasecmp(aconf->name,user))
+		    {
+		      first_aconf = aconf;
+		      break;
+		    }
+
+		  if((aconf->name[0] == '~') &&
+		     (aconf->name[1] == '*') &&
+		     (aconf->name[2] == '\0'))
+		    {
+		      first_aconf = aconf;
+		      break;
+		    }
+		}
+	    }
+	}
+    }
+  else
+    {
+      for(ptr=piece_ptr; ptr; ptr=ptr->next_piece)
+	{
+	  if((aconf=ptr->conf_ptr))
+	    {
+	      if( (!matches(ptr->host_piece,host_piece)) &&
+		  (aconf->status & flags) )
+		{
+		  if(!strcasecmp(aconf->name,user))
+		    {
+		      first_aconf = aconf;
+		      break;
+		    }
+		}
 	    }
 	}
     }
